--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+blinker==1.3
+click==6.7
 Flask==0.11
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.0
+GeoAlchemy==0.7.2
+GeoAlchemy2==0.4.0
+geojson==2.1.0
+itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+pkg-resources==0.0.0
+postgis==1.0.4
+psycopg2==2.7.3.1
 SQLAlchemy==1.0.3
 Werkzeug==0.10.4
-blinker==1.3
-itsdangerous==0.24
-wsgiref==0.1.2
-psycopg2
